gap fix

--- a/resources/styles/_curved-block.scss
+++ b/resources/styles/_curved-block.scss
@@ -13,7 +13,7 @@
     height: 50vh;
     width: inherit;
     z-index: -1;
-    top: calc(-50vh + 10px);
+    top: calc(-50vh + 100px);
   }
 
   .curved-block {
